fix alignment of cohort header

--- a/app/styles/app.css
+++ b/app/styles/app.css
@@ -1250,7 +1250,7 @@ dl:after {
 
 #ruby-007 h1{
   text-align: center;
-  padding-right: 10%;
+  padding-right: 16%;
 }
 
 a.my-logo:hover{
